--- a/src/app/components/app.html
+++ b/src/app/components/app.html
@@ -20,8 +20,7 @@
             <div id="resize-bar-right" class="resize-bar" ng-mousedown="resizeBarMousedown($event)"></div>
             <div class="col-inner">
                 <button (click)="login()">Login</button>
-                {{ data | json }}
-                <!--<playlist></playlist>-->
+                <playlist></playlist>
             </div>
         </div>
     </div>
