--- a/src/app/components/explorer/explorer.html
+++ b/src/app/components/explorer/explorer.html
@@ -1,6 +1,10 @@
 <div class="row">
     <div class="col-lg-5">
-        <tree *ngIf="app.isAuthorized" (onSelectNode)="onSelectNode($event)"></tree>
+        <tree *ngIf="app.isAuthorized"
+              [roots]="treeRoots"
+              [options]="getTreeOptions()"
+              (onSelectNode)="onSelectNode($event)">
+        </tree>
     </div>
     <div class="col-lg-7">
         <content></content>
