--- a/src/app/components/app.html
+++ b/src/app/components/app.html
@@ -1,45 +1,3 @@
-<div class="navbar navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-2">
-                <a class="navbar-brand" href="/">Drive Music Player</a>
-            </div>
-            <div class="col-lg-10">
-                <button (click)="login()">Login</button>
-                <player></player>
-            </div>
-        </div>
-    </div>
+<div>
+    <router-outlet></router-outlet>
 </div>
-
-<div class="row">
-    <div class="col-lg-8">
-        <explorer></explorer>
-    </div>
-    <div class="col-lg-4">
-        <playlist></playlist>
-    </div>
-</div>
-
-<!--<div id="content-wrapper">-->
-    <!--<div id="content-col-wrapper">-->
-        <!--<div id="content-col" class="col">-->
-            <!--<div id="resize-bar-left" class="resize-bar" ng-mousedown="resizeBarMousedown($event)"></div>-->
-            <!--<div id="resize-bar-right" class="resize-bar" ng-mousedown="resizeBarMousedown($event)"></div>-->
-            <!--<div class="col-inner">-->
-                <!--<playlist></playlist>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div id="left-col" class="col">-->
-        <!--<div class="col-inner">-->
-            <!--<button (click)="login()">Login</button>-->
-            <!--<tree [roots]="rootNodes"></tree>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div id="right-col" class="col">-->
-        <!--<div class="col-inner">-->
-            <!--<playlist-manager></playlist-manager>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
