get rid of explorer component

--- a/src/app/components/player/file/file.html
+++ b/src/app/components/player/file/file.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" [ngClass]="{selected: isSelected}">
     <div class="col-lg-1">
         <i *ngIf="file.isFolder" class="glyphicon glyphicon-folder-close"></i>
         <i *ngIf="!file.isFolder" class="glyphicon glyphicon-file"></i>
