--- a/src/app/components/player/player.html
+++ b/src/app/components/player/player.html
@@ -13,7 +13,17 @@
 
 <div class="row">
     <div class="col-lg-8">
-        <explorer></explorer>
+        <div class="row">
+            <div class="col-lg-5">
+                <tree [roots]="treeRoots"
+                      [options]="getTreeOptions()"
+                      (onSelectNode)="onSelectNode($event)">
+                </tree>
+            </div>
+            <div class="col-lg-7">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
     </div>
     <div class="col-lg-4">
         <playlist></playlist>
