--- a/src/app/components/player/playlist/playlist.html
+++ b/src/app/components/player/playlist/playlist.html
@@ -1,42 +1,9 @@
-<div>
-    <div class="toolbar">
-        <h1>Playlist</h1>
-        <button type="button" ng-click="savePlaylistDialog()" ng-if="playlist.records.length" title="Save playlist as..."><i class="icon-save"></i></button>
-        <button type="button" ng-click="deleteSelected()" ng-if="playlist.selectedRecords.length" title="Remove (Del)"><i class="icon-trash"></i></button>
-        <button type="button" ng-click="clear()" ng-if="playlist.records.length" title="Clear"><i class="icon-remove"></i></button>
-    </div>
-    <div id="playlist" ng-mousedown="mousedown($event)" droppable>
-        <div class="toolbar" style="display: none">
-            <div class="toolbar-inner">
-                <a ng-click="openSaveDialog()" ng-mousedown="$event.stopPropagation()"><i class="glyphicon glyphicon-floppy-disk"></i></a>
-                <a><i class="glyphicon glyphicon-trash"></i></a>
-                <div id="save-playlist-dialog" class="controls form-inline" ng-if="saveDialog" ng-mousedown="$event.stopPropagation()">
-                    <input type="text"
-                           class="form-control input-sm"
-                           ng-keydown="keydown($event)"
-                           placeholder="save playlist as..."
-                           maxlength="50"
-                           ng-model="saveName"
-                    />
-                    <a class="btn btn-primary btn-sm" ng-click="save(saveName)" ng-disabled="saveDisabled()">Save</a>
-                </div>
-            </div>
-        </div>
-        <div ng-if="playlist.loading" class="loading-label"><div><i class="glyphicon glyphicon-time"></i><span>Loading...</span></div></div>
-        <div ng-if="!playlist.loading && playlist.records.length == 0" class="loading-label"><div><i class="glyphicon glyphicon-list"></i><span>Playlist is empty</span></div></div>
-        <ul ng-class="{dragover: dragover}">
-            <li draggable droppable
-                *ngFor="let record of playlist.records"
-                ng-mousedown="mousedown($event, record)"
-                ng-mouseup="mouseup($event, record)"
-                ng-dblclick="dblclick($event, record)"
-                ng-class="{current: record == player.currentRecord, selected: record.selected, dragover: record.dragover, disabled: !record.item.client || !record.item.client.isLoggedIn()}">
-                <span><i class="glyphicon glyphicon-time"></i><i class="glyphicon glyphicon-play"></i><i class="glyphicon glyphicon-pause"></i>&nbsp;{{record.file.name}}</span>
-            </li>
-        </ul>
-        <!--<br>-->
-        <!--<ul>-->
-        <!--<li ng-repeat="record in playlist.shuffledRecords" ng-class="{current: record == player.currentRecord}">{{record.item.name}}</li>-->
-        <!--</ul>-->
-    </div>
+<div *ngIf="!isLoading">
+    <record #record
+          *ngFor="let file of playlist.records"
+          [file]="file"
+          (dblclick)="play(record)"
+          (mousedown)="select(record)"></record>
 </div>
+
+<div *ngIf="isLoading">Loading...</div>
